<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <data>
        <import type="com.udacity.shoestore.converter.DoubleConverter"/>
        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />
    </data>
    <!-- use the linear layout for the basic UI -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/shoe_name_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shoe_name"
            style="@style/text_style" />

        <EditText
            android:id="@+id/shoe_name_EditText"
            style="@style/edit_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/shoe_name_hint"
            android:text="@={shoe.name}"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            tools:ignore="TextContrastCheck" />
        <TextView
            android:id="@+id/shoe_company_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shoe_company"
            style="@style/text_style" />

        <EditText
            android:id="@+id/shoe_company_EditText"
            style="@style/edit_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:text="@={shoe.company}"
            android:hint="@string/shoe_company_hint"
            android:inputType="textEmailAddress"
            tools:ignore="TextContrastCheck" />
        <TextView
            android:id="@+id/shoe_size_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shoe_size"
            style="@style/text_style" />

        <EditText
            android:id="@+id/shoe_size_EditText"
            style="@style/edit_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/shoe_size_hint"
            android:text="@={DoubleConverter.doubleToString(shoe.size)}"
            android:importantForAutofill="no"
            android:inputType="number"/>
        <TextView
            android:id="@+id/shoe_description_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shoe_description"
            style="@style/text_style" />

        <EditText
            android:id="@+id/shoe_description_EditText"
            style="@style/edit_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={shoe.description}"
            android:hint="@string/shoe_description_hint"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            >

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/standerd_border"
                android:text="@string/shoe_cancel" />

            <Button
                android:id="@+id/save_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:background="@drawable/special_border"
                android:text="@string/shoe_save"
                android:textColor="#ffffff" />

        </LinearLayout>

    </LinearLayout>

</layout>