<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <!-- use the linear layout for the basic UI -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#ffffff"
        >

        <ImageView
            android:id="@+id/login_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_tablet_login_amico"
            android:layout_gravity="center"
            android:contentDescription="login image " />

        <TextView
            android:id="@+id/emailLable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_email"
            style="@style/text_style" />

        <EditText
            android:id="@+id/emailEditText"
            style="@style/edit_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_email_hint"

            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/passwordLable"
            style="@style/text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_password" />

        <EditText
            android:id="@+id/passwordEditText"
            style="@style/edit_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            >

            <Button
                android:id="@+id/signup_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/signup_text"
                android:background="@drawable/standerd_border"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"/>
            <Button
                android:id="@+id/login_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:text="@string/login_text"
                android:textColor="#ffffff"
                android:background="@drawable/special_border"
                />

        </LinearLayout>
    </LinearLayout>
</layout>

